--- a/css/accordion-menu.css
+++ b/css/accordion-menu.css
@@ -28,7 +28,7 @@ section button {
     cursor: pointer;
     padding: 18px 36px 18px 30px;
     width: 100%;
-    border: none;
+    border: 1px solid #888;
     outline: none;
     font-size: 15px;
     letter-spacing: 1px;
